#2266 Helper functions and events for creating projects with new Shipyard spec (#214)
* #2266 added .finished events for project and service creation

* #2266 renamed files

* #2266 renamed structs

* #2266 renamed project property

* #2266 use shipyard-controller endpoint for project/service CRUD

* #2266 use shipyard-controller endpoint for project/service CRUD

* #2266 added update function

* #2266 added project.delete event
